fixed collapsing gallery text on details page

--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,7 @@ footer p {
   text-align: center;
   margin-top: 20px;
   font-size: 1.2em;
+  height: 1.2em;
 }
 
 .splide__slide div {
